# rusty_chess

./: package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  chess.ts  commands.ts  index.html  main.ts  main.tsx  styles.css
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/app/: Cargo.toml
src-tauri/app/src/: main.rs
src-tauri/chess/: Cargo.toml
src-tauri/chess/benches/: bench.rs
src-tauri/chess/src/: bitboard.rs  board.rs  coord.rs  fen.rs  lib.rs  moves.rs  piece.rs  sliding.rs
src-tauri/chess/src/moves/: lookup.rs  sliding.rs
src-tauri/profile/: Cargo.toml
src-tauri/profile/src/: main.rs
src-tauri/scratch/: Cargo.toml
src-tauri/scratch/src/: main.rs
src-tauri/src/: chess.rs  fen.rs  main.rs
src-tauri/src/chess/: bitboard.rs  board.rs  coord.rs  mod.rs  move.rs  piece.rs
src-tauri/src/chess/moves/: mod.rs  sliding.rs
src/components/: FenInput.tsx  Game.tsx  Square.tsx
